--- a/client/src/startPage/startPage.scss
+++ b/client/src/startPage/startPage.scss
@@ -77,7 +77,54 @@
         height: 80%;
         display: flex;
         flex-direction: column;
+        align-items: center;
+        padding: 10px;
+        overflow: auto;
 
+        &::-webkit-scrollbar {
+            width: 10px;
+            
+        }
+
+        &::-webkit-scrollbar-track {
+            background-color: #f1f1f1;
+            
+            border-radius: 5px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: #888;
+            border-radius: 5px;
+        }
+
+        &::-webkit-scrollbar-thumb:hover {
+            background-color: #555;
+        }
+
+
+
+        .test {
+            width: 80%;
+            border: 1px solid black;
+            border-radius: 10px;
+            margin: 10px;
+            background-color: #e5e5e5;
+            padding: 10px;
+            cursor: pointer;
+
+            &:hover {
+                background-color: #949494;
+                transform: scale(1.005);
+
+
+            }
+
+            &:active {
+                transform: scale(0.99);
+                background-color: #5f5f5f;
+                border: none;
+            }
+        }
     }
 
 }
