--- a/client/src/testDetails/testDetails.scss
+++ b/client/src/testDetails/testDetails.scss
@@ -24,6 +24,11 @@
         border-radius: 10px;
         align-items: center;
 
+        h1 {
+            text-align: center;
+            width: 100%;
+        }
+
         &::-webkit-scrollbar {
             width: 12px;
         }
@@ -116,7 +121,7 @@
                 left: 2%;
             }
 
-            button{
+            button {
                 margin-top: 10px;
             }
 
@@ -209,10 +214,12 @@
             background-color: #000000;
             border: none;
         }
-        .buttons{
+
+        .buttons {
             display: flex;
             height: 10%;
-            button{
+
+            button {
                 height: 100%;
             }
         }
