--- a/client/src/testsDetailsPage/testsDetailsPage.scss
+++ b/client/src/testsDetailsPage/testsDetailsPage.scss
@@ -1,6 +1,7 @@
 .testsDetailsPage {
     width: 100%;
     height: 100%;
+
     header {
         height: 10%;
         width: 100%;
@@ -30,6 +31,62 @@
             transform: scale(0.99);
             background-color: #000000;
             border: none;
+        }
+    }
+
+    .tests {
+        height: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+        overflow: auto;
+
+        &::-webkit-scrollbar {
+            width: 10px;
+
+            transform: translateX(-5px);
+            /* Смещение влево */
+        }
+
+        &::-webkit-scrollbar-track {
+            background-color: #f1f1f1;
+
+            border-radius: 5px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: #888;
+            border-radius: 5px;
+        }
+
+        &::-webkit-scrollbar-thumb:hover {
+            background-color: #555;
+        }
+
+
+
+        .test {
+            width: 80%;
+            border: 1px solid black;
+            border-radius: 10px;
+            margin: 10px;
+            background-color: #e5e5e5;
+            padding: 10px;
+            cursor: pointer;
+
+            &:hover {
+                background-color: #949494;
+                transform: scale(1.005);
+
+
+            }
+
+            &:active {
+                transform: scale(0.99);
+                background-color: #5f5f5f;
+                border: none;
+            }
         }
     }
 }
