--- a/client/src/authPage/authPage.scss
+++ b/client/src/authPage/authPage.scss
@@ -6,6 +6,7 @@
     align-items: center;
 
     .form {
+        position: relative;
         height: 80%;
         width: 50%;
         border: 1px solid black;
@@ -76,31 +77,53 @@
                 border-bottom: 2px solid #474747;
             }
 
-            button {
-                padding: 10px 20px;
-                background-color: #000000b4;
-                border: none;
-                border-radius: 5px;
-                transition: transform 0.1s;
-                cursor: pointer;
-                font-size: 17px;
-                text-shadow: 0px 0px 3px rgb(255 255 255 / 72%);
-                color: white;
-            }
 
-            button:hover {
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #000000b4;
+            border: none;
+            border-radius: 5px;
+            transition: transform 0.1s;
+            cursor: pointer;
+            font-size: 17px;
+            text-shadow: 0px 0px 3px rgb(255 255 255 / 72%);
+            color: white;
+        }
+
+        button:hover {
+            background-color: #000000d2;
+            transform: scale(1.20);
+            border: none;
+        }
+
+        button:active {
+            transform: scale(0.99);
+            background-color: #000000;
+            border: none;
+        }
+
+        .cancelButton {
+            width: 30%;
+            height: 50px;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%) scale(1);
+            bottom: 10px;
+        
+            transition: background-color 0.1s, transform 0.1s;
+        
+            &:hover {
+                transform: translateX(-50%) scale(1.10);
+            }
+        
+            &:active {
                 background-color: #000000d2;
-                transform: scale(1.20);
-                border: none;
-            }
-
-            button:active {
-                transform: scale(0.99);
-                background-color: #000000;
+                transform: translateX(-50%) scale(0.9);
                 border: none;
             }
         }
-
 
     }
 }
