--- a/client/src/testDetails/testDetails.scss
+++ b/client/src/testDetails/testDetails.scss
@@ -96,13 +96,35 @@
         }
     }
 
+    .inputs {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        input {
+            background-color: #ebebeb;
+            margin-bottom: 10px;
+            width: 40%;
+            border-radius: 8px;
+            border: none;
+            height: 10%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 10px;
+        }
+    }
+
     .update {
+        margin-bottom: 10px;
         background-color: rgba(0, 0, 0, 0.1294117647);
         width: 80%;
         border-radius: 10px;
         padding: 10px;
         height: 80%;
         overflow: auto;
+
 
         .question {
             position: relative;
