--- a/client/src/startPage/startPage.scss
+++ b/client/src/startPage/startPage.scss
@@ -7,6 +7,31 @@
         justify-content: space-around;
         align-items: center;
 
+        .burgerButton {
+            display: none;
+        }
+
+        .hidedPanelfalse {
+            position: fixed;
+            top: 0;
+            right: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgb(255 255 255 / 96%);
+            transition: transform 0.3s ease-in-out;
+            z-index: 999;
+            transform: translateX(100%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            button {
+                display: block;
+                margin-top: 10px;
+                width: 80%;
+            }
+        }
+
         h1 {
             margin: 0px;
             color: #6a6a6a;
@@ -113,7 +138,8 @@
             cursor: pointer;
             display: flex;
             align-items: center;
-            .right{
+
+            .right {
                 margin-left: 50px;
                 font-size: 20px;
             }
@@ -133,4 +159,110 @@
         }
     }
 
+}
+
+@media (max-width:768px) {
+    .startPage {
+
+        header {
+            justify-content: space-between;
+            padding: 0px 30px;
+
+            button {
+                &:hover {
+                    background-color: rgba(0, 0, 0, 0.7058823529);
+                    transform: scale(1);
+
+
+                }
+
+                &:active {
+                    transform: scale(1);
+                    background-color: rgba(0, 0, 0, 0.7058823529);
+                }
+            }
+        }
+
+        .tests {
+            .test {
+                width: 90%;
+            }
+        }
+
+    }
+}
+
+@media (max-width:680px) {
+    .startPage {
+        header {
+            h1 {
+                font-size: 20px;
+            }
+
+            button {
+                padding: 10px 10px;
+            }
+
+            p {
+                margin: 0px;
+                font-size: 15px;
+            }
+        }
+
+        .tests {
+            .test {
+                margin: 10px 0px;
+            }
+        }
+
+    }
+}
+
+@media (max-width:530px) {
+    .startPage {
+        header {
+
+
+            button {
+                display: none;
+            }
+
+            .hidedPaneltrue {
+                position: fixed;
+                top: 0;
+                right: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgb(255 255 255 / 96%);
+                transition: transform 0.3s ease-in-out;
+                z-index: 999;
+                transform: translateX(0);
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                button {
+                    display: block;
+                    margin-top: 10px;
+                    width: 80%;
+                }
+            }
+
+            .burgerButton {
+                display: block;
+
+                &:hover {
+                    transform: scale(1);
+                    background-color: rgb(75 75 75);
+                }
+
+                &:active {
+                    transform: scale(1);
+                    background-color: rgb(75 75 75);
+                }
+            }
+
+        }
+
+    }
 }
