--- a/client/src/testPassingPage/testPassingPage.scss
+++ b/client/src/testPassingPage/testPassingPage.scss
@@ -14,6 +14,7 @@
             margin: 0px;
         }
     }
+
     justify-content: start;
     flex-direction: column;
     display: flex;
@@ -91,5 +92,42 @@
         transform: scale(0.99);
         background-color: #000000;
         border: none;
+    }
+}
+
+@media (max-width:768px) {
+    .testPassingPage {
+        .testContainer {
+            height: 85%;
+            width: 90%;
+            padding: 0px;
+            .testTime{
+                top: 0px;
+            }
+            .question {
+                padding: 5px 10px;
+                width: 90%;
+
+                ul {
+                    width: 80%;
+                    margin: 10px 0px;
+
+                    li {
+                        width: 90%;
+
+                        label {
+                            input {
+                                margin: 0px 5px;
+                                height: 15px;
+                                width: 15px;
+                            }
+                        }
+                    }
+                }
+            }
+            button{
+                margin: 10px 0px;
+            }
+        }
     }
 }
